--- a/MROCourse/app/src/main/res/layout/content_binarization.xml
+++ b/MROCourse/app/src/main/res/layout/content_binarization.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ucoz.handyby.mrocourse.BinarizationActivity"
     tools:showIn="@layout/app_bar_binarization">
+
+    <com.ucoz.handyby.mrocourse.Views.RowsGystogramView
+        android:id="@+id/gyst_view"
+        android:layout_width="@dimen/gyst_width"
+        android:layout_height="fill_parent"
+        android:background="@android:color/transparent"
+        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/image_view_screenshot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:contentDescription="@null" />
+        android:adjustViewBounds="true"
+        android:contentDescription="@null"
+        android:scaleType="centerCrop" />
 
-</FrameLayout>
+</LinearLayout>
