--- a/MROCourse/app/src/main/res/layout/content_main.xml
+++ b/MROCourse/app/src/main/res/layout/content_main.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ddd"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -16,8 +18,8 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:textColor="#000"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:textColor="#000" />
 
     <TextView
         android:layout_width="wrap_content"
