--- a/MROCourse/app/src/main/res/layout/content_screenshot.xml
+++ b/MROCourse/app/src/main/res/layout/content_screenshot.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ucoz.handyby.mrocourse.ScreenshotActivity"
     tools:showIn="@layout/activity_screenshot">
@@ -16,6 +12,8 @@
         android:id="@+id/image_view_screenshot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:contentDescription="@null" />
+        android:adjustViewBounds="true"
+        android:contentDescription="@null"
+        android:scaleType="fitXY"/>
 
 </FrameLayout>
