--- a/MROCourse/app/src/main/res/menu/activity_binarization_drawer.xml
+++ b/MROCourse/app/src/main/res/menu/activity_binarization_drawer.xml
@@ -14,12 +14,30 @@
 
     <item android:title="Binarization">
         <menu>
-            <item android:id="@+id/nav_bin_by_user" android:icon="@android:drawable/ic_menu_gallery"
+            <item
+                android:id="@+id/nav_bin_by_user"
+                android:icon="@android:drawable/ic_menu_gallery"
                 android:title="By user" />
-            <item android:id="@+id/nav_bin_default" android:icon="@android:drawable/ic_menu_gallery"
+            <item
+                android:id="@+id/nav_bin_default"
+                android:icon="@android:drawable/ic_menu_gallery"
                 android:title="Default (128)" />
-            <item android:id="@+id/nav_bin_method_120" android:icon="@android:drawable/ic_menu_gallery"
+            <item
+                android:id="@+id/nav_bin_method_120"
+                android:icon="@android:drawable/ic_menu_gallery"
                 android:title="Method 120" />
+        </menu>
+    </item>
+    <item android:title="Gystogram">
+        <menu>
+            <item
+                android:id="@+id/nav_gyst_rows"
+                android:icon="@android:drawable/ic_menu_gallery"
+                android:title="Rows" />
+            <item
+                android:id="@+id/nav_gyst_full"
+                android:icon="@android:drawable/ic_menu_gallery"
+                android:title="Rows - fullscreen" />
         </menu>
     </item>
 
