Added gystograms. Added segmentation words with color.

--- a/MROCourse/app/src/main/res/menu/activity_binarization_drawer.xml
+++ b/MROCourse/app/src/main/res/menu/activity_binarization_drawer.xml
@@ -38,7 +38,21 @@
                 android:id="@+id/nav_gyst_full"
                 android:icon="@android:drawable/ic_menu_gallery"
                 android:title="Rows - fullscreen" />
+            <item
+                android:id="@+id/nav_gyst_substract30"
+                android:icon="@android:drawable/ic_menu_gallery"
+                android:title="Substract 30%" />
+            <item
+                android:id="@+id/nav_gyst_spaces_in_rows"
+                android:icon="@android:drawable/ic_menu_gallery"
+                android:title="Spaces gystogram" />
         </menu>
+    </item>
+    <item android:title="Segmentation">
+        <item
+            android:id="@+id/nav_segment_color_words"
+            android:icon="@android:drawable/ic_menu_gallery"
+            android:title="Color words" />
     </item>
 
 </menu>
