--- a/MROCourse/app/src/main/res/layout/content_main.xml
+++ b/MROCourse/app/src/main/res/layout/content_main.xml
@@ -21,10 +21,17 @@
         android:singleLine="true"
         android:textColor="#000" />
 
-    <TextView
+   <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_text"
         android:textColor="#000"
         android:ellipsize="end"/>
+    <!--<EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_text"
+        android:textColor="#000"
+        android:ellipsize="end"
+        android:background="@android:color/transparent"/>-->
 </LinearLayout>
